# bareRAG

./: .gitignore  README.md  cli.py  main.py  main2.py  pyproject.toml  ragapi.py  ragfastapi.py
backend/apps/baserag/: README.md  config.py  main.py
backend/apps/baserag/models/: document.py  embedding.py
backend/apps/baserag/temp_files/: generate_data.py  generate_embeddings.py  query_data.py
backend/apps/baserag/temp_files/chroma_db/: chroma.sqlite3
backend/apps/baserag/utils/: chunking.py  embedding.py  parsing.py
backend/apps/basicrag/services/: loadingdata_1.py
backend/apps/basicrag/utils/: embeddingfun.py
backend/apps/rag/: config.py  generate_embeddings.py
backend/apps/rag/services/: chunkingdata.py  llmresponse.py  loadingdata.py  query_database.py  vectordb.py
backend/apps/rag/utils/: chromaDBManager.py  embeddingfun.py
backend/core/: config.py  vector_db.py
db/chroma_db/: chroma.sqlite3
frontend/react_app/: package-lock.json  package.json
frontend/react_app/public/: index.html  manifest.json
frontend/react_app/src/: App.js
frontend/react_app/src/compponents/: InputBox.js  Message.js  SidePanel.js  chatwindow.js
notebooks/: dev.ipynb
