[tool.poetry]
name = "ollm-apps"
version = "0.1.0"
description = "This repository have open llm apps"
authors = ["bhuvan454 <bhuvankumarchennoju@gmail.com>"]
license = "Apache.V2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^4.2.0"
langchain = "^0.2.1"
chromadb = "^0.5.0"
ollama = "^0.2.0"
langchain-community = "^0.2.1"
pymupdf = "^1.24.5"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
